<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="hint_email">Email</string>
    <string name="hint_password">Constraseña</string>
    <string name="hint_name">Nombre completo</string>
    <string name="hint_phone_number">Teléfono</string>
    <string name="login">Iniciar sesión</string>
    <string name="not_account">¿No tienes cuenta aún? Regístrate</string>
    <string name="register">Registrarse</string>
    <string name="error_email">El formato del email no es válido</string>
    <string name="error_password">La contraseña debe tener un mínimo de %1$d caracteres</string>
    <string name="error_name">El nombre sólo puede contener letras y espacios</string>
    <string name="error_phone_number">El número de teléfono debe contener %1$d números sin espacios en blanco</string>
    <string name="error_birth_date">La fecha de nacimiento no puede estar vacía</string>
    <string name="navigation_offers">Ofertas</string>
    <string name="navigation_publish">Publicar</string>
    <string name="navigation_profile">Perfil</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="offers_list">Lista</string>
    <string name="offers_map">Mapa</string>
    <string name="location_request_title">Permiso de localización</string>
    <string name="location_request_detail">Pet City usa tu localización para filtrarte ofertas cercanas a tu posición.\nDesde ajustes puedes modificar el radio de búsqueda.\nEn caso de no dar permiso, todas las ofertas serán descargadas</string>
    <string name="offer_date">%1$s | %2$s</string>
    <string name="offer_distance">%.3f km</string>
    <string name="radius_not_available">Radio no disponible</string>
    <string name="offer_price">%.2f €</string>
    <string name="retry">Reintentar</string>
    <string name="no_results_search">Búsqueda sin resultados</string>
    <string name="publish_title">¿Tienes un lugar donde cuidar mascotas ajenas?</string>
    <string name="publish_subtitle">¡No lo dudes y publica aquí tu oferta!</string>
    <string name="publish_offer">Publicar oferta</string>
    <string name="publish_title_detail">Indica un título y un detalle</string>
    <string name="hint_offer_title">Título breve y conciso</string>
    <string name="hint_offer_detail">Detalle explicativo</string>
    <string name="next">Continuar</string>
    <string name="publish_images">Sube dos imágenes llamativas</string>
    <string name="image">Imagen</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="permissions_not_granted">Algún permiso necesario no concedido</string>
    <string name="camera_not_available">Cámara no disponible</string>
    <string name="external_storage_not_available">Almacenamiento externo no disponible</string>
    <string name="publish_place">¿Dónde vas a cuidar a los animales?</string>
    <string name="choose_place">Escoger lugar</string>
    <string name="error_google_places">Ha ocurrido un error inesperado: %1$d</string>
    <string name="publish_dates">Indica tus fechas de disponibilidad</string>
    <string name="hint_start_date">Fecha de inicio</string>
    <string name="hint_end_date">Fecha de fin</string>
    <string name="error_first_date_previous_second">La primera fecha debe ser anterior a la segunda</string>
    <string name="publish_animals">Indica tus últimas preferencias</string>
    <string name="num_pets">Número de mascotas que puedes alojar</string>
    <string name="dogs">Perros</string>
    <string name="cats">Gatos</string>
    <string name="pets_types">Tipos de mascotas</string>
    <string name="price">Precio</string>
    <string name="publish_success">Oferta publicada correctamente</string>
    <string name="view">Ver</string>
    <string name="last_activities">Actividad reciente</string>
    <string name="whats_included">¿Qué incluye?</string>
    <string name="num_pets_holded">Nº de mascotas: %1$d</string>
    <string name="accept_offer">Aceptar oferta - %.2f €</string>
    <string name="accept_offer_confirmation_title">Aceptar oferta</string>
    <string name="accept_offer_confirmation_detail">¿Seguro que quiere aceptar esta oferta?</string>
    <string name="accept_offer_successfully">Oferta aceptada correctamente. Serás notificado previamente</string>
    <string name="led_color">Color led notificaciones</string>
    <string name="search_radius">Radio ofertas (km)</string>
    <string name="max_recent_activity">Máx. actividad perfil</string>
    <string name="save">Guardar</string>
    <string name="choose_color">Escoge color</string>
    <string name="noti_title">Recordatorio</string>
    <string name="noti_detail">Mañana tienes que cuidar animales de %1$s</string>
    <string name="no_recent_activity">No hay actividad reciente</string>

</resources>
