<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/publish_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/very_x_large_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_padding"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/publish_title"
        android:textAppearance="@style/WhiteEmphasisTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/very_xxx_large_padding"
        android:text="@string/publish_subtitle"
        android:textAppearance="@style/MediumTextView" />

    <Button
        android:id="@+id/bt_publish_offer"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_offer" />

</LinearLayout>
