<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_bg"
    tools:context=".features.registration.RegistrationActivity">

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/x_large_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x_large_padding"
            android:fontFamily="@font/roboto_slab_light"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="@style/XXXLargeTextView" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorNormalTextView"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/hint_email"
                android:imeOptions="actionGo"
                android:inputType="textEmailAddress"
                android:theme="@style/DrawableEditText.Colored" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorNormalTextView"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/hint_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:longClickable="false"
                android:theme="@style/DrawableEditText.Colored" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorNormalTextView"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/hint_name"
                android:imeOptions="actionGo"
                android:inputType="text|textCapWords"
                android:theme="@style/DrawableEditText.Colored" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorNormalTextView"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/hint_phone_number"
                android:imeOptions="actionGo"
                android:inputType="phone"
                android:theme="@style/DrawableEditText.Colored" />

        </android.support.design.widget.TextInputLayout>

        <com.pablosanchezegido.petcity.views.custom.CircularProgressButton
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/very_large_padding"
            app:buttonText="@string/register" />

    </LinearLayout>

</ScrollView>
