<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AppTheme.Toolbar"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back" />

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="2/5" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/large_padding"
        android:layout_marginStart="@dimen/large_padding"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/publish_images"
        android:textAppearance="@style/BlackEmphasisTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_steps" />

    <ImageView
        android:id="@+id/iv_image_first"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/very_large_padding"
        android:layout_marginStart="@dimen/x_large_padding"
        android:layout_marginTop="@dimen/x_large_padding"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@id/iv_image_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:srcCompat="@drawable/ic_image" />

    <ImageView
        android:id="@+id/iv_image_second"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/x_large_padding"
        android:layout_marginStart="@dimen/very_large_padding"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_image_first"
        app:layout_constraintTop_toTopOf="@id/iv_image_first"
        app:srcCompat="@drawable/ic_image" />

    <Button
        android:id="@+id/bt_image_first"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_padding"
        android:text="@string/image"
        app:layout_constraintEnd_toEndOf="@id/iv_image_first"
        app:layout_constraintStart_toStartOf="@id/iv_image_first"
        app:layout_constraintTop_toBottomOf="@id/iv_image_first" />

    <Button
        android:id="@+id/bt_image_second"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        app:layout_constraintBaseline_toBaselineOf="@id/bt_image_first"
        app:layout_constraintEnd_toEndOf="@id/iv_image_second"
        app:layout_constraintStart_toStartOf="@id/iv_image_second" />

    <Button
        android:id="@+id/bt_next"
        style="@style/RoundedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x_large_padding"
        android:layout_marginEnd="@dimen/x_large_padding"
        android:layout_marginStart="@dimen/x_large_padding"
        android:text="@string/next"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
