<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    android:orientation="vertical"
    tools:targetApi="lollipop">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient_info" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/super_xxx_large_padding"
                    android:layout_marginStart="@dimen/very_large_padding"
                    android:textAppearance="@style/WhiteEmphasisTextView"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"
                    tools:text="Cuido perros en mi jardín" />

                <TextView
                    android:id="@+id/tv_dates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/very_x_large_padding"
                    android:layout_marginStart="@dimen/very_large_padding"
                    android:layout_marginTop="@dimen/padding"
                    android:drawablePadding="@dimen/padding"
                    android:drawableStart="@drawable/ic_event"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/WhiteThinTextView"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"
                    tools:text="27-May-2018 | 29-May-2018" />

                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    style="@style/DotTabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/AppTheme.Toolbar"
                    android:background="@drawable/gradient_toolbar"
                    android:fitsSystemWindows="false"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_back" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/pb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/large_padding"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding"
                    android:layout_marginEnd="@dimen/large_padding"
                    android:layout_marginStart="@dimen/large_padding"
                    android:layout_marginTop="@dimen/large_padding"
                    android:text="@string/whats_included"
                    android:textAppearance="@style/WhiteEmphasisTextView.BlackEmphasisTextView" />

                <TextView
                    android:id="@+id/tv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_padding"
                    android:layout_marginEnd="@dimen/large_padding"
                    android:layout_marginStart="@dimen/large_padding"
                    android:textAppearance="@style/WhiteMediumTextView.BlackMediumTextView"
                    tools:text="Nunquam attrahendam lanista.Nunquam attrahendam lanista.Nunquam attrahendam lanista.Nunquam attrahendam lanista.Nunquam attrahendam lanista." />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x_small_padding"
                    android:background="@drawable/dash_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/large_padding">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_image"
                        android:layout_width="@dimen/xx_large_padding"
                        android:layout_height="@dimen/xx_large_padding"
                        tools:src="@drawable/auth_bg" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_alignBottom="@id/civ_image"
                        android:layout_alignTop="@id/civ_image"
                        android:layout_marginStart="@dimen/large_padding"
                        android:layout_toEndOf="@id/civ_image"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/WhiteMediumTextView.BlackMediumTextView"
                        tools:text="Pablo Sánchez Egido" />

                    <CheckedTextView
                        android:id="@+id/ctv_dogs"
                        style="@style/CheckedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/civ_image"
                        android:layout_marginTop="@dimen/large_padding"
                        android:text="@string/dogs"
                        tools:checked="true" />

                    <CheckedTextView
                        android:id="@+id/ctv_cats"
                        style="@style/CheckedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/ctv_dogs"
                        android:layout_below="@id/civ_image"
                        android:layout_marginStart="@dimen/large_padding"
                        android:layout_marginTop="@dimen/large_padding"
                        android:layout_toEndOf="@id/ctv_dogs"
                        android:text="@string/cats"
                        tools:checked="true" />

                    <TextView
                        android:id="@+id/tv_num_pets"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/ctv_cats"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="@dimen/large_padding"
                        android:layout_toEndOf="@id/ctv_cats"
                        android:gravity="end"
                        android:textAppearance="@style/WhiteThinTextView.BlackThinTextView"
                        tools:text="Mascotas alojadas: 10" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x_small_padding"
                    android:background="@drawable/dash_line" />

                <TextView
                    android:id="@+id/tv_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_padding"
                    android:drawablePadding="@dimen/padding"
                    android:drawableStart="@drawable/ic_location"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/WhiteThinTextView.BlackThinTextView"
                    tools:text="Calle Compañía, 5, Salamanca, Spain" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/lite_map_height"
                    map:liteMode="true" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <Button
        android:id="@+id/bt_accept_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/big_bottom_button_bg"
        android:padding="@dimen/large_padding"
        android:text="@string/accept_offer"
        android:textAllCaps="true"
        android:textAppearance="@style/WhiteEmphasisTextView" />

</LinearLayout>
